# Rust

./: .gitignore  .tldr
backend/entity_relationship/: .env  Cargo.toml
backend/entity_relationship/entity/: Cargo.toml
backend/entity_relationship/entity/src/: lib.rs  post.rs  prelude.rs  users.rs
backend/entity_relationship/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260219_181113_create_posts_table.rs
backend/entity_relationship/src/: main.rs
backend/entity_relationship/src/exception/: global_expection.rs  mod.rs
backend/entity_relationship/src/keys/: keys.rs
backend/entity_relationship/src/posts/: mod.rs
backend/entity_relationship/src/posts/dto/: request.rs  response.rs
backend/entity_relationship/src/posts/models/: posts_model.rs
backend/entity_relationship/src/posts/routes/: mod.rs  posts_route.rs
backend/entity_relationship/src/posts/service/: posts_service.rs
backend/entity_relationship/src/users/: mod.rs
backend/entity_relationship/src/users/dto/: request.rs
backend/entity_relationship/src/users/models/: user_model.rs
backend/entity_relationship/src/users/routes/: user_routes.rs
backend/entity_relationship/src/users/service/: user_service.rs
backend/rest_api/: .env  Cargo.toml
backend/rest_api/entity/: Cargo.toml
backend/rest_api/migration/src/: m20220101_000001_create_table.rs
backend/rest_api/src/: main.rs  users.rs
backend/rest_api/src/users/: mod.rs  service.rs
backend/rest_api/src/users/exception/: api_error.rs
backend/rest_api/src/users/keys/: keys.rs
backend/rest_api/src/users/models/: models.rs
backend/rest_api/src/users/routes/: routes.rs
backend/rest_api/src/users/service/: guards.rs  jwt_service.rs  mod.rs  service.rs
language/: Cargo.toml
language/hello_world/src/: main.rs
