[package]
name = "rust-language"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "hello_world"
path = "src/bin/hello_world.rs"

[[bin]]
name = "guessing_game"
path = "src/bin/guessing_game.rs"

[[bin]]
name = "shadowing"
path = "src/bin/shadowing.rs"

[[bin]]
name = "compound_datatypes"
path = "src/bin/compound_datatypes.rs"

[[bin]]
name = "functions"
path = "src/bin/functions.rs"

[[bin]]
name = "conditional"
path = "src/bin/conditional.rs"

[[bin]]
name = "loops"
path = "src/bin/loops.rs"

[[bin]]
name = "ownership"
path = "src/bin/ownership.rs"

[[bin]]
name = "references"
path = "src/bin/references.rs"

[[bin]]
name = "slice_type"
path = "src/bin/slice_types.rs"

[[bin]]
name = "struct"
path = "src/bin/struct.rs"

[[bin]]
name = "rectangle"
path = "src/bin/rectangle.rs"

[[bin]]
name = "enums"
path = "src/bin/enums.rs"

[[bin]]
name = "if_let"
path = "src/bin/if_let.rs"

[[bin]]
name = "vectors"
path = "src/bin/vectors.rs"

[[bin]]
name = "string"
path = "src/bin/string.rs"

[[bin]]
name = "hashmap"
path = "src/bin/hashmap.rs"

[[bin]]
name = "error_handling"
path = "src/bin/error_handling.rs"

[[bin]]
name = "generics"
path = "src/bin/generics.rs"

